# athean-main

./: .env.example  .gitignore  .gitpod.yml  .npmrc  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  justfile  llms.txt  package.json  pnpm-lock.yaml  turbo.json
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: README.md  env.py
apps/api/src/athean_api/: __init__.py  config.py  db.py  deps.py  logging.py  main.py  models.py
apps/api/src/athean_api/auth/: allowlist.py  nonce.py  rate_limit.py  rbac.py  roles.py  session.py  siwe.py
apps/api/src/athean_api/healing/: __init__.py  emergency_stop.py  health.py  pause.py  restart.py  watchdog.py
apps/api/src/athean_api/middleware/: __init__.py  rate_limit.py
apps/api/src/athean_api/routers/: adversarial.py  agents.py  arc.py  auth.py  counterfactual.py  debates.py  elysium.py  goals.py  health.py  markets.py  moirai.py  olympus.py  passports.py  restraint.py  signals.py  theses.py  traces.py  trades.py  underworld.py
apps/api/src/athean_api/schemas/: __init__.py  agent.py  counterfactual.py  debate.py  goal.py  passport.py  restraint.py  signal.py  thesis.py  trace.py  trade.py
apps/api/src/athean_api/ws/: stream.py
artifacts/: README.md  (+11 more)
services/boule/: Dockerfile  README.md  pyproject.toml
services/boule/data/prewarm/: README.md
services/boule/src/boule/: calibrator.py  cli.py  consumer.py  debate.py  diversity.py  metrics.py  orchestrator.py  router.py  schema.py  swarm.py  telemetry.py  trace.py
services/boule/src/boule/agents/: adversarial.py  auditor.py  base.py  bear_researcher.py  bull_researcher.py  execution_agent.py  market_scanner.py  news_analyst.py  parse_vote.py  risk_manager.py  sentiment_analyst.py  technical_analyst.py
services/boule/src/boule/council/: __init__.py  charter.md
services/boule/src/boule/council/demigods/: __init__.py  apollo.py  ares.py  cassandra.py  daedalus.py  hephaestus.py  solon.py  strategos.py
services/boule/src/boule/council/gods/: __init__.py  athena.py  hades.py  themis.py  zeus.py
services/boule/src/boule/council/humans/: __init__.py  arb_detector.py  liquidity_monitor.py  momentum_watcher.py  news_event_watcher.py  polymarket_scanner.py  spread_scanner.py  volatility_detector.py
services/boule/src/boule/council/messengers/: __init__.py  hermes.py  hermes_archive.py  hermes_auth.py  hermes_market.py  hermes_news.py  hermes_rpc.py
services/boule/src/boule/healing/: __init__.py  circuit_breaker.py  degrade.py  retry.py  rpc_failover.py  schema_repair.py
services/boule/src/boule/improve/: __init__.py  feedback.py  regret.py  replay.py  weights.py
services/boule/src/boule/llm/: __init__.py  anthropic_client.py  base.py  cache.py  fallback_client.py  gemini_client.py  openai_compat_client.py
services/boule/src/boule/memory/: __init__.py  recall.py  store.py
services/boule/src/boule/prompts/: apollo.md  ares.md  athena.md  auditor.md  base.md  bear.md  bull.md  cassandra.md  daedalus.md  eris.md  execution.md  hades.md  hephaestus.md  humans.md  messengers.md  news.md  risk.md  sentiment.md  solon.md  strategos.md  technical.md  themis.md  zeus.md
services/boule/tests/: test_calibrator.py  test_diversity.py  test_eris.py  test_fallback.py  test_gemini_config.py  test_llm_cache.py  test_openai_compat.py  test_property_calibrator.py  test_swarm.py  test_telemetry.py  test_veto_detector.py
services/chronos/: README.md  pyproject.toml
services/chronos/src/chronos/: __init__.py  cli.py  jobs.py  scheduler.py
services/chronos/tests/: test_scheduler.py
services/elysium/: README.md  pyproject.toml
services/elysium/src/elysium/: backtest.py  counterfactual.py  overfit_detector.py  paper_arena.py  replay.py  simulator.py
services/elysium/tests/: test_counterfactual.py
services/ostrakon/: Dockerfile  README.md  pyproject.toml
services/ostrakon/src/ostrakon/: ablation.py  agent_calibration.py  banishment.py  beta_calibration.py  brier.py  brier_weighted_council.py  calibration.py  category_calibration.py  cli.py  composite.py  conformal_calibration.py  decay.py  leaderboard.py  metrics.py  penalty.py  recalibrate_loop.py  rewards.py  sharpe.py  tax_export.py
services/ostrakon/tests/: test_ablation.py  test_agent_calibration.py  test_beta_calibration.py  test_brier_weighted_council.py  test_category_calibration.py  test_conformal.py  test_metrics.py  test_tax_export.py  test_walk_forward_calibration.py
services/parthenon/: Dockerfile  README.md  pyproject.toml
services/parthenon/src/parthenon/: __init__.py  anchor.py  archive.py  cli.py  erc8004_client.py  hash.py  identity.py  ipfs.py  irys.py  local.py  manifest.py  merkle.py  passport.py  replay.py  reputation.py  trace_anchor.py  validation.py
services/parthenon/tests/: test_hash.py  test_trace_anchor.py
services/strategos/: Dockerfile  README.md  pyproject.toml
services/strategos/artifacts/: bybit_paper_20260611T123439Z.json
services/strategos/src/strategos/: bybit_settlement.py  circle_stack.py  cli.py  consumer.py  execution_mode.py  gateway_client.py  intent.py  latency.py  live.py  maker_rebate.py  orderbook.py  paper.py  payload.py  paymaster_client.py  polymarket_builder.py  polymarket_clob.py  precompile.py  router.py  safety.py  settlement_watcher.py  slippage.py  slippage_learner.py  stat_arb.py  usyc_treasury.py
services/strategos/src/strategos/backends/: __init__.py  base.py  bybit.py
services/strategos/tests/: test_bybit.py  test_circle_stack.py  test_circle_stack_facade.py  test_execution_mode.py  test_maker_rebate.py  test_paper.py  test_paper_fees.py  test_polymarket_builder.py  test_property_slippage.py  test_safety.py  test_slippage_learner.py  test_stat_arb.py
services/underworld/: README.md  pyproject.toml
services/underworld/src/underworld/: broken_assumptions.py  graveyard.py  hallucination_log.py  lessons.py  postmortem.py  prompt_evolver.py
services/underworld/tests/: test_postmortem.py  test_prompt_evolver.py
(+405 files in other folders)
