[project]
name = "athean-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "athean-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "web3>=6.20",
    "siwe>=2.1",
    "eth-account>=0.12",
    "structlog>=24.1",
    "python-jose[cryptography]>=3.3",
    "passlib>=1.7",
    "itsdangerous>=2.2",
    "alembic>=1.13",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athean_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
athean-core = { path = "../../packages/athean-core", editable = true }

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "pytest-mock>=3.14"]
