[project]
name = "boule"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "athean-core",
    "pydantic>=2.7",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "tenacity>=8.3",
    # Optional Prometheus exporter; metrics module degrades to no-op
    # when this is not installed, but every production deploy should
    # have it.
    "prometheus-client>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boule"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
athean-core = { path = "../../packages/athean-core", editable = true }

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-mock>=3.14", "hypothesis>=6.100"]
