[project]
name = "chronos"
version = "0.1.0"
requires-python = ">=3.12"
description = "Athean scheduler — periodically triggers market scans and deliberations."
dependencies = [
    "athean-core",
    "pydantic>=2.7",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "tenacity>=8.3",
    # Async scheduler with full cron-expression support.
    "apscheduler>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chronos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
athean-core = { path = "../../packages/athean-core", editable = true }

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-mock>=3.14"]
