[project]
name = "parthenon"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "athean-core",
    "pydantic>=2.7",
    "httpx>=0.27",
    "redis[hiredis]>=5.0",
    "web3>=6.20",
    "structlog>=24.1",
    "tenacity>=8.3",
    # keccak256 used in Merkle hashing must match Solidity's keccak exactly,
    # so we pin eth-hash's pycryptodome backend rather than fall back to
    # sha3_256 (different padding, would silently produce wrong roots).
    "eth-hash[pycryptodome]>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parthenon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
athean-core = { path = "../../packages/athean-core", editable = true }

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-mock>=3.14"]
