[project]
name = "strategos"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "athean-core",
    "pydantic>=2.7",
    "httpx>=0.27",
    "redis[hiredis]>=5.0",
    "py-clob-client>=0.17",
    "structlog>=24.1",
    "tenacity>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strategos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
athean-core = { path = "../../packages/athean-core", editable = true }

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-mock>=3.14", "hypothesis>=6.100"]
